--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       content: "";
       position: absolute;
       inset: 0;
-      background-image: url("https://picsum.photos/1200/600?blur=3");
+      background-image: url("FN_FNBR_OGS7_KeyArt.jpg");
       background-size: cover;
       background-position: center;
       filter: blur(6px) brightness(0.55);
@@ -245,3 +245,4 @@
 
 </body>
 </html>
+
