--- a/index.html
+++ b/index.html
@@ -256,11 +256,12 @@ body {
   align-items: center;
 
   /* NEW — Full background image */
-  background-image: url("https://picsum.photos/1920/1080");
+  background-image: url("FN_FNBR_OGS7_KeyArt.jpg");
   background-size: cover;
   background-position: center;
   background-attachment: fixed; /* smooth parallax feel */
 }
+
 
 
 
