--- a/index.html
+++ b/index.html
@@ -265,3 +265,23 @@ body {
 
 
 
+body {
+  background: #0d0f12;
+  color: #e6e6e6;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  /* NEW — Full background image */
+  background-image: url("https://picsum.photos/1920/1080");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed; /* smooth parallax feel */
+}
+
+
+
+
+
