--- a/index.html
+++ b/index.html
@@ -274,12 +274,13 @@ body {
   align-items: center;
 
   /* NEW — Full background image */
-  background-image: url("https://picsum.photos/1920/1080");
+  background-image: url("FNBR_WinterBackground.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed; /* smooth parallax feel */
 }
+
 
 
 
