--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     <!-- IMAGE GRID -->
     <section class="image-grid">
       <div class="image-box glass">
-        <img src="c:\Users\kylem\OneDrive\DeskTop\WEBSITE\row-1-column-1 (1).jpg" alt="Image 1">
+        <img src="row-1-column-1 (1).jpg" alt="Image 1">
       </div>
       <div class="image-box glass">
         <img src="c:\Users\kylem\OneDrive\DeskTop\WEBSITE\row-1-column-2.jpg" alt="Image 2">
@@ -262,6 +262,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed; /* smooth parallax feel */
 }
+
 
 
 
