Enhance layout with background image and styles
Added a full background image to the body and updated styles for the home title box and other elements.

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <img src="row-1-column-1 (1).jpg" alt="Image 1">
       </div>
       <div class="image-box glass">
-        <img src="c:\Users\kylem\OneDrive\DeskTop\WEBSITE\row-1-column-2.jpg" alt="Image 2">
+        <img src="row-1-column-2.jpg"Image 2">
       </div>
       <div class="image-box glass">
         <img src="c:\Users\kylem\OneDrive\DeskTop\WEBSITE\row-1-column-3.jpg" alt="Image 3">
@@ -262,6 +262,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed; /* smooth parallax feel */
 }
+
 
 
 
