--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <img src="row-1-column-2.jpg"Image 2">
       </div>
       <div class="image-box glass">
-        <img src="c:\Users\kylem\OneDrive\DeskTop\WEBSITE\row-1-column-3.jpg" alt="Image 3">
+        <img src="row-1-column-3.jpg"Image 3">
       </div>
       <div class="image-box glass">
         <img src="c:\Users\kylem\OneDrive\DeskTop\WEBSITE\fortnite-battle-royale-season-7-ice-king-lynx-zenith-57-4K.jpg" alt="Image 4">
@@ -262,6 +262,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed; /* smooth parallax feel */
 }
+
 
 
 
