--- a/index.html
+++ b/index.html
@@ -241,6 +241,20 @@
 </html>
 
 
+<!-- Background Image Override -->
+<style>
+  body {
+    background-image: url("https://picsum.photos/1920/1080");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+  }
+</style>
+
+
+
+
 
 
 
