Change background image and update HTML structure
Updated the background image in the HTML file and made minor adjustments to the content structure.

--- a/index.html
+++ b/index.html
@@ -244,13 +244,14 @@
 <!-- Background Image Override -->
 <style>
   body {
-    background-image: url("https://picsum.photos/1920/1080");
+    background-image: url("Daf1Oq.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
   }
 </style>
+
 
 
 
