Refactor index.html layout and styles
Updated the HTML structure and styles for the main layout, including navigation, hero section, image grid, and quote sections. Added background image styling.

--- a/index.html
+++ b/index.html
@@ -245,12 +245,13 @@
 <style>
   body {
     background-image: url("Daf1Oq.png");
-    background-size: cover;
+    background-size: center;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
   }
 </style>
+
 
 
 
