--- a/index.html
+++ b/index.html
@@ -248,9 +248,10 @@
     background-size: center;
     background-position: center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment: center;
   }
 </style>
+
 
 
 
