Fix HTML structure and update background properties
Updated the background image properties and fixed HTML structure issues.

--- a/index.html
+++ b/index.html
@@ -246,11 +246,12 @@
   body {
     background-image: url("Daf1Oq.png");
     background-size: center;
-    background-position: center;
+    background-position: fixed;
     background-repeat: no-repeat;
-    background-attachment: center;
+    background-attachment: fixed;
   }
 </style>
+
 
 
 
