--- a/index.html
+++ b/index.html
@@ -246,11 +246,12 @@
   body {
     background-image: url("Daf1Oq.png");
     background-size: center;
-    background-position: fixed;
+    background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
   }
 </style>
+
 
 
 
