--- a/index.html
+++ b/index.html
@@ -195,6 +195,28 @@
   <!-- MAIN CONTENT -->
   <main>
 
+    <!-- HERO WITH BLURRED BACKGROUND -->
+    <section class="hero glass home-title-box">
+      <h1>WELCOME TO F O R E R U N N E R</h1>
+      <p>Dedicated for U-E-F-N Users, where the <b>SKY</b> is the limit.</p>
+    </section>
+
+    <!-- IMAGE GRID -->
+    <section class="image-grid">
+      <div class="image-box glass">
+        <img src="row-1-column-1 (1).jpg" alt="Image 1">
+      </div>
+      <div class="image-box glass">
+        <img src="row-1-column-2.jpg"Image 2">
+      </div>
+      <div class="image-box glass">
+        <img src="row-1-column-3.jpg"Image 3">
+      </div>
+      <div class="image-box glass">
+        <img src="" alt="Image 4">
+      </div>
+    </section>
+
 
     <!-- QUOTE SECTION 1 -->
     <section class="quote-section glass">
@@ -217,6 +239,7 @@
 
 </body>
 </html>
+
 
 
 
