--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <img src="row-1-column-3.jpg"Image 3">
       </div>
       <div class="image-box glass">
-        <img src="" alt="Image 4">
+        <img src="row-1-column-3.jpg"Image 3" alt="Image 4">
       </div>
     </section>
 
@@ -239,6 +239,7 @@
 
 </body>
 </html>
+
 
 
 
