--- a/index.html
+++ b/index.html
@@ -179,6 +179,22 @@
   </style>
 </head>
 
+   <!-- Full‑Page Background Layer (Does NOT affect layout) -->
+<div class="page-bg"></div>
+
+<style>
+  .page-bg {
+    position: fixed;
+    inset: 0;
+    z-index: -1; /* stays behind everything */
+    background-image: url("https://picsum.photos/1920/1080");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+  }
+</style>
+
 <body>
 
   <!-- NAVIGATION -->
@@ -239,6 +255,7 @@
 
 </body>
 </html>
+
 
 
 
