Correct HTML structure and image attributes
Fixed HTML structure and corrected image attributes.

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     position: fixed;
     inset: 0;
     z-index: -1; /* stays behind everything */
-    background-image: url("Daf1Oq.png");
+    background-image: src="row-1-column-1 (1).jpg" alt="Image 1">;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -257,6 +257,7 @@
 
 </body>
 </html>
+
 
 
 
