--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
     /* QUOTE SECTIONS */
     .quote-section {
-      padding: 300px;
+      padding: 30px;
       border-left: 4px solid #00aaff;
       border-radius: 12px;
       background: rgba(255, 255, 255, 0.05);
@@ -239,7 +239,7 @@
   </main>
 
 
-  <!-- Full‑Page Background Layer (Does NOT affect layout) -->
+<!-- Full‑Page Background Layer (Does NOT affect layout) -->
 <div class="page-bg"></div>
 
 <style>
@@ -247,7 +247,7 @@
     position: fixed;
     inset: 0;
     z-index: -1; /* stays behind everything */
-    background-image: src="row-1-column-1 (1).jpg" alt="Image 1">;
+    background-image: url("https://picsum.photos/1920/1080");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -257,6 +257,7 @@
 
 </body>
 </html>
+
 
 
 
