--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     position: fixed;
     inset: 0;
     z-index: -1; /* stays behind everything */
-    background-image: url("https://picsum.photos/1920/1080");
+    background-image: url("FN_FNBR_OGS9_Opening.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -257,6 +257,7 @@
 
 </body>
 </html>
+
 
 
 
