--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Main Layout - Liquid Glass</title>
+  <title>Explore</title>
 
   <style>
     /* RESET */
@@ -14,7 +14,15 @@
       font-family: system-ui, sans-serif;
     }
 
-
+    body {
+      background: #0d0f12;
+      color: #e6e6e6;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-bottom: 60px;
+    }
 
     /* LIQUID GLASS BASE */
     .glass {
@@ -26,217 +34,168 @@
       box-shadow: 0 0 20px rgba(0, 153, 255, 0.25);
     }
 
-    /* NEW — BLURRED BACKGROUND BEHIND TITLE */
-    .home-title-box {
-      position: relative;
-      padding: 40px;
-      border-radius: 18px;
-      overflow: hidden;
+    /* PAGE TITLE */
+    h1 {
+      margin-top: 40px;
+      font-size: 2.4rem;
       text-align: center;
-    }
-
-    .home-title-box::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background-image: url("FN_FNBR_OGS7_KeyArt.jpg");
-      background-size: cover;
-      background-position: center;
-      filter: blur(6px) brightness(0.55);
-      opacity: 0.35;
-      z-index: 0;
-    }
-
-    .home-title-box h1,
-    .home-title-box p {
-      position: relative;
-      z-index: 1;
-    }
-
-    /* NAVIGATION */
-    header {
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      padding: 20px 0;
-    }
-
-    nav {
-      width: 90%;
-      max-width: 700px;
-    }
-
-    .nav-bar {
-      display: flex;
-      justify-content: center;
-      gap: 24px;
-      padding: 12px 20px;
-    }
-
-    .nav-btn {
-      padding: 10px 22px;
-      border-radius: 14px;
-      text-decoration: none;
-      color: #e6e6e6;
-      font-weight: 600;
-      letter-spacing: 0.5px;
-      transition: all 0.25s ease;
-      border: 1px solid rgba(0, 153, 255, 0.4);
-      background: rgba(255, 255, 255, 0.05);
-    }
-
-    .nav-btn:hover {
       color: #00aaff;
-      box-shadow: 0 0 12px rgba(0, 153, 255, 0.7),
-                  inset 0 0 12px rgba(0, 153, 255, 0.4);
-      border-color: rgba(0, 153, 255, 0.8);
-      transform: translateY(-2px);
     }
 
-    /* MAIN CONTENT */
-    main {
+    /* EXPLORE GRID */
+    .explore-grid {
       width: 90%;
       max-width: 1200px;
       margin-top: 40px;
-      display: flex;
-      flex-direction: column;
-      gap: 40px;
-    }
-
-    /* HERO SECTION */
-    .hero {
-      padding: 40px;
-      text-align: center;
-    }
-
-    .hero h1 {
-      font-size: 2.8rem;
-      margin-bottom: 10px;
-    }
-
-    .hero p {
-      font-size: 1.2rem;
-      opacity: 0.8;
-    }
-
-    /* IMAGE GRID */
-    .image-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 24px;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 28px;
     }
 
-    .image-box {
-      height: 200px;
-      border-radius: 16px;
-      overflow: hidden;
+    /* CARD */
+    .explore-card {
       position: relative;
+      overflow: hidden;
+      border-radius: 18px;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
-    .image-box img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
-    .image-box:hover {
+    .explore-card:hover {
       transform: translateY(-6px);
       box-shadow: 0 0 20px rgba(0, 153, 255, 0.6);
     }
 
-    /* QUOTE SECTIONS */
-    .quote-section {
-      padding: 30px;
-      border-left: 4px solid #00aaff;
+    /* VALID TAG */
+    .tag {
+      position: absolute;
+      top: 12px;
+      left: 12px;
+      background: rgba(0, 255, 120, 0.15);
+      border: 1px solid #00ff88;
+      color: white;
+      padding: 4px 10px;
       border-radius: 12px;
-      background: rgba(255, 255, 255, 0.05);
-      box-shadow: inset 0 0 12px rgba(0, 153, 255, 0.3);
+      font-size: 0.75rem;
+      font-weight: 600;
+      letter-spacing: 0.5px;
+      text-shadow: 0 0 6px rgba(0, 255, 120, 0.8);
     }
 
-    .quote-section h2 {
-      margin-bottom: 12px;
-      font-size: 1.6rem;
-      color: #00aaff;
+    /* IMAGE */
+    .explore-card img {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.15);
     }
 
-    .quote-section p {
-      font-size: 1.1rem;
-      opacity: 0.9;
-      line-height: 1.6;
+    /* CARD CONTENT */
+    .card-content {
+      padding: 18px;
+    }
+
+    .card-title {
+      font-size: 1.3rem;
+      margin-bottom: 6px;
+      color: #e6e6e6;
+    }
+
+    .card-desc {
+      font-size: 0.95rem;
+      opacity: 0.85;
+      margin-bottom: 14px;
+      line-height: 1.4;
+    }
+
+    .card-meta {
+      font-size: 0.8rem;
+      opacity: 0.7;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .meta-left {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .meta-right {
+      text-align: right;
     }
 
     /* RESPONSIVE */
     @media (max-width: 600px) {
-      .hero h1 {
+      h1 {
         font-size: 2rem;
-      }
-      .nav-btn {
-        padding: 8px 14px;
-        font-size: 0.9rem;
       }
     }
   </style>
 </head>
 
-
 <body>
 
-  <!-- NAVIGATION -->
-  <header>
-    <nav class="glass">
-      <div class="nav-bar">
-        <a href="#" class="nav-btn">HOME</a>
-        <a href="#" class="nav-btn">EXPLORE</a>
-        <a href="#" class="nav-btn">PROFILE</a>
+  <h1>Explore</h1>
+
+  <section class="explore-grid">
+
+    <!-- CARD 1 -->
+    <div class="explore-card glass">
+      <span class="tag">VALID!</span>
+      <img src="c:\Users\kylem\OneDrive\DeskTop\WEBSITE\Battleitout.jpg" alt="Asset Image">
+      <div class="card-content">
+        <h2 class="card-title">Mountain Escape</h2>
+        <p class="card-desc">A peaceful retreat high above the clouds, offering a breathtaking view.</p>
+
+        <div class="card-meta">
+          <div class="meta-left">
+            <span>BY: PlaceholderUser</span>
+          </div>
+          <div class="meta-right">
+            <span>2 hours ago</span>
+          </div>
+        </div>
       </div>
-    </nav>
-  </header>
+    </div>
 
-  <!-- MAIN CONTENT -->
-  <main>
+    <!-- CARD 2 -->
+    <div class="explore-card glass">
+      <span class="tag">VALID!</span>
+      <img src="c:\Users\kylem\OneDrive\DeskTop\WEBSITE\Battleitout.jpg" alt="Asset Image">
+      <div class="card-content">
+        <h2 class="card-title">Cyber Alley</h2>
+        <p class="card-desc">A neon-lit street filled with futuristic tech and hidden stories.</p>
 
-    <!-- HERO WITH BLURRED BACKGROUND -->
-    <section class="hero glass home-title-box">
-      <h1>WELCOME TO F O R E R U N N E R</h1>
-      <p>Dedicated for U-E-F-N Users, where the <b>SKY</b> is the limit.</p>
-    </section>
-
-    <!-- IMAGE GRID -->
-    <section class="image-grid">
-      <div class="image-box glass">
-        <img src="row-1-column-1 (1).jpg" alt="Image 1">
+        <div class="card-meta">
+          <div class="meta-left">
+            <span>BY: PlaceholderUser</span>
+          </div>
+          <div class="meta-right">
+            <span>Yesterday</span>
+          </div>
+        </div>
       </div>
-      <div class="image-box glass">
-        <img src="row-1-column-2.jpg"Image 2">
+    </div>
+
+    <!-- CARD 3 -->
+    <div class="explore-card glass">
+      <span class="tag">VALID!</span>
+      <img src="c:\Users\kylem\OneDrive\DeskTop\WEBSITE\Battleitout.jpg" alt="Asset Image">
+      <div class="card-content">
+        <h2 class="card-title">Ocean Depths</h2>
+        <p class="card-desc">A mysterious underwater world full of color and life.</p>
+
+        <div class="card-meta">
+          <div class="meta-left">
+            <span>BY: PlaceholderUser</span>
+          </div>
+          <div class="meta-right">
+            <span>3 days ago</span>
+          </div>
+        </div>
       </div>
-      <div class="image-box glass">
-        <img src="row-1-column-3.jpg"Image 3">
-      </div>
-      <div class="image-box glass">
-        <img src="row-1-column-3.jpg"Image 3" alt="Image 4">
-      </div>
-    </section>
+    </div>
 
-
-    <!-- QUOTE SECTION 1 -->
-    <section class="quote-section glass">
-      <h2>Quote of the Day</h2>
-      <p>
-        “FORERUNNER is something Ive been waiting for, and its amazing, well worth the wait !  
-        Thankyou - KAYO.”
-      </p>
-    </section>
-
-    <!-- QUOTE SECTION 2 -->
-    <section class="quote-section glass">
-      <h2>Inspiration</h2>
-      <p>
-        “Forerunner is a Great platform and has everything I need to get started!.”
-      </p>
-    </section>
-
-  </main>
+  </section>
 
 
 <!-- Full‑Page Background Layer (Does NOT affect layout) -->
@@ -257,6 +216,7 @@
 
 </body>
 </html>
+
 
 
 
