--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       width: 90%;
       max-width: 1200px;
       margin-top: 40px;
-      display: flex;
+      display: center;
       flex-direction: column;
       gap: 40px;
     }
@@ -259,5 +259,6 @@
 
 </body>
 </html>
+
 
 
