--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
       box-sizing: border-box;
       font-family: system-ui, sans-serif;
     }
+    
+    body {
+  background: #0d0f12;
+  color: #e6e6e6;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 
 
 
@@ -259,6 +269,7 @@
 
 </body>
 </html>
+
 
 
 
