--- a/CONTENT/Explore.html
+++ b/CONTENT/Explore.html
@@ -1,1 +1,201 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Explore</title>
 
+  <style>
+    /* RESET */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: system-ui, sans-serif;
+    }
+
+    body {
+      background: #0d0f12;
+      color: #e6e6e6;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-bottom: 60px;
+    }
+
+    /* LIQUID GLASS BASE */
+    .glass {
+      background: rgba(255, 255, 255, 0.08);
+      backdrop-filter: blur(18px) saturate(180%);
+      -webkit-backdrop-filter: blur(18px) saturate(180%);
+      border: 1px solid rgba(255, 255, 255, 0.25);
+      border-radius: 18px;
+      box-shadow: 0 0 20px rgba(0, 153, 255, 0.25);
+    }
+
+    /* PAGE TITLE */
+    h1 {
+      margin-top: 40px;
+      font-size: 2.4rem;
+      text-align: center;
+      color: #00aaff;
+    }
+
+    /* EXPLORE GRID */
+    .explore-grid {
+      width: 90%;
+      max-width: 1200px;
+      margin-top: 40px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 28px;
+    }
+
+    /* CARD */
+    .explore-card {
+      position: relative;
+      overflow: hidden;
+      border-radius: 18px;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .explore-card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 0 20px rgba(0, 153, 255, 0.6);
+    }
+
+    /* VALID TAG */
+    .tag {
+      position: absolute;
+      top: 12px;
+      left: 12px;
+      background: rgba(0, 255, 120, 0.15);
+      border: 1px solid #00ff88;
+      color: white;
+      padding: 4px 10px;
+      border-radius: 12px;
+      font-size: 0.75rem;
+      font-weight: 600;
+      letter-spacing: 0.5px;
+      text-shadow: 0 0 6px rgba(0, 255, 120, 0.8);
+    }
+
+    /* IMAGE */
+    .explore-card img {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.15);
+    }
+
+    /* CARD CONTENT */
+    .card-content {
+      padding: 18px;
+    }
+
+    .card-title {
+      font-size: 1.3rem;
+      margin-bottom: 6px;
+      color: #e6e6e6;
+    }
+
+    .card-desc {
+      font-size: 0.95rem;
+      opacity: 0.85;
+      margin-bottom: 14px;
+      line-height: 1.4;
+    }
+
+    .card-meta {
+      font-size: 0.8rem;
+      opacity: 0.7;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .meta-left {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .meta-right {
+      text-align: right;
+    }
+
+    /* RESPONSIVE */
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 2rem;
+      }
+    }
+  </style>
+</head>
+
+<body>
+
+  <h1>Explore</h1>
+
+  <section class="explore-grid">
+
+    <!-- CARD 1 -->
+    <div class="explore-card glass">
+      <span class="tag">VALID!</span>
+      <img src="c:\Users\kylem\OneDrive\DeskTop\WEBSITE\Battleitout.jpg" alt="Asset Image">
+      <div class="card-content">
+        <h2 class="card-title">Mountain Escape</h2>
+        <p class="card-desc">A peaceful retreat high above the clouds, offering a breathtaking view.</p>
+
+        <div class="card-meta">
+          <div class="meta-left">
+            <span>BY: PlaceholderUser</span>
+          </div>
+          <div class="meta-right">
+            <span>2 hours ago</span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- CARD 2 -->
+    <div class="explore-card glass">
+      <span class="tag">VALID!</span>
+      <img src="c:\Users\kylem\OneDrive\DeskTop\WEBSITE\Battleitout.jpg" alt="Asset Image">
+      <div class="card-content">
+        <h2 class="card-title">Cyber Alley</h2>
+        <p class="card-desc">A neon-lit street filled with futuristic tech and hidden stories.</p>
+
+        <div class="card-meta">
+          <div class="meta-left">
+            <span>BY: PlaceholderUser</span>
+          </div>
+          <div class="meta-right">
+            <span>Yesterday</span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- CARD 3 -->
+    <div class="explore-card glass">
+      <span class="tag">VALID!</span>
+      <img src="c:\Users\kylem\OneDrive\DeskTop\WEBSITE\Battleitout.jpg" alt="Asset Image">
+      <div class="card-content">
+        <h2 class="card-title">Ocean Depths</h2>
+        <p class="card-desc">A mysterious underwater world full of color and life.</p>
+
+        <div class="card-meta">
+          <div class="meta-left">
+            <span>BY: PlaceholderUser</span>
+          </div>
+          <div class="meta-right">
+            <span>3 days ago</span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
+</body>
+</html>
