--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     position: fixed;
     inset: 0;
     z-index: -1; /* stays behind everything */
-    background-image: url("FN_BG_A.png");
+    background-image: url("FN_BG_2_B.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -263,6 +263,7 @@
 
 </body>
 </html>
+
 
 
 
