--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
       transform: translateY(-2px);
     }
 
+
+
+    <a href="/about.html">About</a>
+<a href="/explore.html">Explore</a>
+
+
     /* MAIN CONTENT */
     main {
       width: 90%;
@@ -263,6 +269,7 @@
 
 </body>
 </html>
+
 
 
 
