--- a/index.html
+++ b/index.html
@@ -245,6 +245,25 @@
   </main>
 
 
+  <!-- KAYOS DRIVE -->
+<div class="drive-banner kayo-drive glass">
+  <h2>K A Y O S &nbsp; D R I V E</h2>
+  <p class="updated">Last Updated: Dec 22, 2025</p>
+</div>
+
+<!-- DOGS DRIVE -->
+<div class="drive-banner dogs-drive glass">
+  <h2>D O G S &nbsp; D R I V E</h2>
+  <p class="updated">Last Updated: Dec 22, 2025</p>
+</div>
+
+<!-- EVES PIKKA -->
+<div class="drive-banner eves-drive glass">
+  <h2>E V E S &nbsp; P I K K A</h2>
+  <p class="updated">Last Updated: Dec 22, 2025</p>
+</div>
+
+  
 <!-- Full‑Page Background Layer (Does NOT affect layout) -->
 <div class="page-bg"></div>
 
@@ -263,6 +282,7 @@
 
 </body>
 </html>
+
 
 
 
