--- a/index.html
+++ b/index.html
@@ -61,25 +61,24 @@
 
     ________________________________________________________________________
 
-
-    /* DRIVE SECTION WRAPPER */
+/* DRIVE SECTION WRAPPER */
 .drive-section {
-  display: flex;
-  flex-direction: column;
-  gap: 40px;
   width: 90%;
   max-width: 1200px;
   margin: 60px auto 0;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
 }
 
 /* DRIVE BANNER CARD */
 .drive-banner {
-  padding: 40px;
+  width: 100%;
+  padding: 30px 40px;
   border-radius: 18px;
   text-align: center;
   border: 3px solid transparent;
   animation: glow-cycle 6s linear infinite;
-  width: 100%;
   box-sizing: border-box;
 }
 
@@ -96,6 +95,7 @@
   font-size: 0.9rem;
   opacity: 0.85;
   margin-top: 20px;
+  text-align: center;
 }
 
 /* ANIMATED GLOW */
@@ -124,6 +124,7 @@
   --c2: #00ff9c;
   --c3: #00e0ff;
 }
+
 
 
     _______________________________________________
@@ -351,6 +352,7 @@
 
 </body>
 </html>
+
 
 
 
